--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="assets\images\IMG_0203.jpg" style="width:170px; height:150px;">
 
     <p>
-        Hello! My name is Austin, Im 23 and live in Riverside, CA. For as long as I can remember I've always wanted to work in the computer industry. I wasn't sure how I was going to do this until iI came across this program. Now I believe I have found my purpose.    </p>
+        Hello!! My name is Austin, Im 23 and live in Riverside, CA. For as long as I can remember I've always wanted to work in the computer industry. I wasn't sure how I was going to do this until iI came across this program. Now I believe I have found my purpose.    </p>
         
     <p> I don't have much experience in coding, but I've always wanted to learn. Some things I like to do on my spare time are: camping, hiking, exploring, and most of all rock climing! Rock climbing has always been a big passion for me. It's actually where I met my wife, and many of my good friends.</p> 
     
