--- a/contact.html
+++ b/contact.html
@@ -4,27 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
 </head>
-<header>Austin Sedlack</header>
-<body>
-    <div>
-        <h1>Contact</h1>
 
+<body>
+    <div id="nav">
+
+        <div id="name">
+            Austin Sedlack
+        </div>
+
+        <ul id="links">
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">Info</a></li>
+
+        </ul>
+
+   </div>
+
+    <div id="form">
+        <h1>Contact</h1>
+        <br>
     <form>
-        <ul>
+        <ul class="form">
         <label for="fname">First Name</label>
-        <input type="text" id="fname" name="fname"> <br>
+        <input type="text" id="fname" name="fname">
+         <br>
         <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lname"> <br>
+        <input type="text" id="lname" name="lname">
+         <br>
         <label for="email">Email</label>
         <input type="text" id="email" name="email"><br>
+        <label for="message">Message</label>
+        <input type="text" id="message" name="message"> <br>
+        <button>Summit</button>
         </ul>
     </form>
 
     </div>
     
 </body>
+
+    <footer class="footer">&copy;2020</footer>
+
 </html>
