--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
    <div id="nav">
 
-        <div id="name">
-            Austin Sedlack
-        </div>
+        <a id="myName">Austin Sedlack</a>
 
         <ul id="links">
             <li><a href="contact.html">Contact</a></li>
@@ -28,11 +26,8 @@
 
    <div id="center">
         <h1>About Me</h1>
-
-
-   
         <img src="assets\images\IMG_0203.jpg" style="width:170px; height:150px;">
-    <p>
+        <p>
         Hello! My name is Austin. Im 23 and live in Riverside, CA. For as long as I can remember I've always wanted to work in the computer industry. I wasn't sure how I was going to do this until I came across this program. Now I believe I have found my purpose.    </p>
         
         <p> I don't have much experience in coding, but I've always wanted to learn. Some things I like to do in my spare time are camping, hiking, exploring, and most of all rock climbing! The sport of rock climbing has always been a big passion for me. It's actually where I met my wife, and many of my good friends.</p> 
