viewable on phones

--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,14 @@
             <label for="email">Email</label>
             <input type="text" id="email" name="email"><br>
             <label for="message">Message</label>
-            <input type="text" id="message" name="message"> <br>
+            <textarea type="text" id="message" name="message"></textarea> <br>
             <button id="summit">Summit</button>
             
         </form>
 
     </div>
     
+    <script src="srcipt.js"></script>  
 </body>
 
     <footer class="footer">&copy;2020</footer>
