--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -43,6 +45,8 @@
 
 
   </div>
+
+<script src="srcipt.js"></script>  
 </body>
     <footer class="footer">&copy;2020</footer>
 
